# boost-geometry-workshop

./: .gitignore  CMakeLists.txt  README  boost_geometry_any.cpp  boost_geometry_reproduce_msvc_using_bug.cpp  boost_geometry_wkb.cpp  configure.bat  geometry_utility.hpp
boost/geometry/extensions/gis/geometries/: ogc.hpp
boost/geometry/extensions/gis/io/wkb2/: read_wkb.hpp  utility.hpp
boost/geometry/extensions/gis/io/wkb2/detail/: ogc.hpp  parser.hpp
